# SpatialLM

./: .gitignore  pyproject.toml
spatiallm/: inference.py
