[project]
name = "spatiallm"
version = "0.1.1"
description = "SpatialLM: Training Large Language Models for Structured Indoor Modeling"
authors = [{name="ManyCore Research Team"}]
license = "Llama3.2"
readme = "README.md"
requires-python = "==3.12.*"

dependencies =[
    "torch==2.8",
    "transformers<=4.46.1",
    "safetensors >= 0.4.5",
    "pandas >= 2.2.3",
    "einops >= 0.8.1",
    "numpy >= 1.26",
    "scipy >= 1.15.2",
    "scikit-learn >= 1.6.1",
    "toml >= 0.10.2",
    "tokenizers >=0.19.0,<0.20.4",
    "huggingface_hub >=0.25.0",
    "rerun-sdk >= 0.21.0",
    "shapely >= 2.0.7",
    "bbox >= 0.9.4",
    "terminaltables >= 3.1.10",
    "open3d >= 0.18.0",
    "nvidia-cudnn-cu12",
    "nvidia-nccl-cu12",
    "addict >= 2.4.0",
    "spconv-cu126",
    "torch_scatter",
    "torchsparse @ git+https://github.com/mit-han-lab/torchsparse.git",
    "timm",
    "ninja",
    "flash-attn"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
name = "torch_scatter_index"
url = "https://data.pyg.org/whl/torch-2.8.0+cu128.html"
format = "flat"

[tool.uv.sources]
torch = {index="pytorch"}
torchvision = {index="pytorch"}
torch_scatter = {index="torch_scatter_index"}

[tool.uv.extra-build-dependencies]
torch-scatter = [{requirement="torch", match-runtime=true}]
flash-attn = ["packaging","wheel",{requirement="torch", match-runtime=true}]
torchsparse = ["torch"]

# [tool.uv.extra-build-variables]
# flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.poe.tasks]
install-training = "pip install omegaconf datasets<=3.6.0 accelerate<=1.7.0 wandb"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "torch"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
